--- a/WeatherInfo/WeatherInfo/Base.lproj/Main.storyboard
+++ b/WeatherInfo/WeatherInfo/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Info" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JG5-CR-f3O" userLabel="Weather Info Label">
                                         <rect key="frame" x="0.0" y="0.0" width="392.66666666666669" height="33.666666666666664"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -39,7 +39,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="392.66666666666669" height="200"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="gR7-1z-IdS">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="gR7-1z-IdS">
                                                             <rect key="frame" x="39.333333333333343" y="31.333333333333329" width="314" height="137.33333333333337"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="2UX-Dn-9Fc" userLabel="City Stack View">
@@ -63,7 +63,7 @@
                                                                     </constraints>
                                                                 </stackView>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VUk-eb-Bi9" userLabel="WeatherInfo Stack View">
-                                                                    <rect key="frame" x="239.33333333333334" y="0.0" width="74.666666666666657" height="137.33333333333334"/>
+                                                                    <rect key="frame" x="184" y="0.0" width="130" height="137.33333333333334"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="P8n-yO-JTj" userLabel="States Stack View">
                                                                             <rect key="frame" x="0.0" y="0.0" width="74.666666666666671" height="24"/>
@@ -109,6 +109,9 @@
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                     </subviews>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="130" id="JNa-gS-L9w"/>
+                                                                    </constraints>
                                                                 </stackView>
                                                             </subviews>
                                                         </stackView>
@@ -155,7 +158,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="c" width="18" height="18"/>
+        <image name="c" width="37.333332061767578" height="37.333332061767578"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
